2004-04-23
    * In splitter sample, rename OnDraw to on_draw so it will work
    * Fix big bug in ScrolledWindow that caused splitter sample to 
      crash immediately
    * NOTE: The following classes have known problems that may cause 
      crashes if you use set_client_data and/or get_client_data: 
        Choice, ComboBox, CommandEvent, SocketEvent, EvtHandler,
        ListBox, Socket
    * NOTE: The following classes have known problems that may cause 
      crashes if you use these methods:
      - Event (get_event_object)
      - ListCtrl (on_get_item_attr, on_get_item_image, on_get_item_text)
      - TreeCtrl (on_compare_items)
      

2004-04-17
    * Minor updates to README files
    * Tagged tree as 0.3.0
    

2004-03-29
    * Update samples to use correct method names:
      dialogs/dialog.rb: CanVeto -> can_veto
      artprov/artprov.rb: CreateBitmap -> create_bitmap
    * Add note to controls/controls.rb sample explaining that 
      the current get/set_client_data can segfault


2004-03-24
    * Gentoo ebuild fixed (added DESTDIR & sed trickery)
      [Submitted by Gour]
      

2004-03-14
    * Fixed listctrl sample to use new naming for on_xxx callbacks
    * ListCtrl no longer requires subclasses to implement on_get_item_attr,
      to match the documentation. 
      A ListCtrl using virtual mode must still override on_get_item_text. 
      A ListCtrl that is virtual AND has an image list must override 
      on_get_item_image
    * Added MDI support, and an MDI sample
    

2004-03-14 02:00
    * Cleaned up Validator sample (etc/test21), and fixed Wx::Validator so
      it behaves sanely. Also renamed the "clone" callback to "copy" to 
      avoid conflicting with Ruby's Object#clone method.
      

2004-03-13 22:30
    * Removed bad printf from ListCtrl.cpp that was printing a warning
    * Now print a warning if the user app defined OnInit instead of on_init
    * Update extconf.rb as proposed by Kontra Gergely to automatically 